<resources>
    <string name="app_name">Visit Sri Lanka</string>

    <!--Create Account As Tourist Activity(cat)-->
    <string name="catHeading">Create Account as Tourist</string>
    <string name="catNameField">Name</string>
    <string name="catContactNumberField">Contact Number</string>
    <string name="catEmailField">Email</string>
    <string name="catCountryYouFromField">Country You From</string>
    <string name="catCreatePassword">Create a Password</string>
    <string name="catConfirmPassword">Confirm Password</string>
    <string name="catUploadProfilePictureButton">Pick Image as Profile Picture</string>
    <string name="catCreateAccountButton">Create Account</string>

    <!--Sign In Activity(si)-->
    <string name="siHeading">Sign In</string>
    <string name="siEmailField">Email</string>
    <string name="siPassword">Password</string>
    <string name="siSubmitButton">Submit</string>

    <!--Share Your Experiences with Others Activity(syeo)-->
    <string name="syeHeading">Share Your Experiences with Others</string>
    <string name="syeNameField">Name of the Place</string>
    <string name="syeLocationField">Location</string>
    <string name="syeExperienceField">Describe Your Experience</string>
    <string name="syeUploadSomeImagesButton">Upload some Pictures</string>
    <string name="syeShareButton">Share</string>

    <!--My Tourist Account Activity(mta)-->
    <string name="mtaWelcomeHeading">Welcome James</string>
    <string name="mtaTouristName">James Anderson</string>
    <string name="mtaTouristEmail">jamesanderson@gmail.com</string>
    <string name="mtaTouristContactNumber">0713456783</string>
    <string name="mtaTouristCountry">England</string>
    <string name="mtaShareYourExperiences">Share Your Experiences</string>
    <string name="mtaEditProfileButton">Edit Profile</string>
    <string name="mtaSignOutButton">Sign Out</string>

    <!--Main Navigation Page Activity(mnp)-->
    <string name="mnpWelcomeHeading">Welcome to Visit Sri Lanka Mobile Platform</string>
    <string name="mnpCreateAccountAsTouristButton">Create Account as Tourist</string>
    <string name="mnpHotelRegistrationButton">Hotel Registration</string>
    <string name="mnpTourGuideRegistrationButton">Tour Guide Registration</string>
    <string name="mnpTourDriverRegistrationButton">Tour Driver Registration</string>
    <string name="mnpSignInButton">Sign In</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>




    <string name="et_pwd">Password</string>
    <string name="cb_rem_me">Remember Me</string>
    <string name="btn_login">Login</string>
    <string name="driver_registration">Driver Registration</string>
    <string name="driver_name">Driver Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="make_reservation">Make Reservation</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="pick_up_location">Pick-up location</string>
    <string name="drop_off_location">Drop-off location</string>
    <string name="book_now">Book Now</string>
    <string name="edit_driver_details">Edit Driver Details</string>
    <string name="save_changes">Save Changes</string>
    <string name="driver_login">Driver Login</string>
    <string name="login">Login</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="main_menu">Main Menu</string>
    <string name="title_activity_show_drivers">ShowDrivers</string>
    <string name="get_driver_details">Get Driver Details</string>
</resources>