<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/sri_lanka_background_image_01"
    tools:context=".CreateAccountAsTouristActivity"
>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:background="@color/mrtSubMainBackgroundColor"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/mrtFontColor"
                    android:text="@string/catHeading"
                    android:textSize="32sp"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    />

                <EditText
                    android:id="@+id/touristName"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/catNameField"
                    android:background="@color/mrtInputFieldColor"
                    android:layout_marginTop="25dp"
                    android:paddingLeft="10dp"
                    />

                <EditText
                    android:id="@+id/touristEmail"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/catEmailField"
                    android:background="@color/mrtInputFieldColor"
                    android:layout_marginTop="15dp"
                    android:paddingLeft="10dp"
                    />

                <EditText
                    android:id="@+id/touristContactNumber"
                    android:inputType="phone"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/catContactNumberField"
                    android:background="@color/mrtInputFieldColor"
                    android:layout_marginTop="15dp"
                    android:paddingLeft="10dp"
                    />

                <EditText
                    android:id="@+id/touristCountry"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/catCountryYouFromField"
                    android:background="@color/mrtInputFieldColor"
                    android:layout_marginTop="15dp"
                    android:paddingLeft="10dp"
                    />

                <EditText
                    android:id="@+id/createdPassword"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/catCreatePassword"
                    android:background="@color/mrtInputFieldColor"
                    android:layout_marginTop="15dp"
                    android:paddingLeft="10dp"
                    />

                <EditText
                    android:id="@+id/confirmedPassword"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/catConfirmPassword"
                    android:background="@color/mrtInputFieldColor"
                    android:layout_marginTop="15dp"
                    android:paddingLeft="10dp"
                    />

                <ImageView
                    android:id="@+id/uploadProfilePictureImageView"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:src="@drawable/baseline_account_box_24"/>

                <Button
                    android:id="@+id/uploadProfilePictureButton"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/catUploadProfilePictureButton"
                    android:background="@color/purple_200"
                    android:layout_marginTop="15dp"
                    android:paddingLeft="10dp"
                    />

                <Button
                    android:id="@+id/createAccountButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/mrtFontColor"
                    android:background="@drawable/create_account_as_tourist_activity_create_account_button"
                    android:text="@string/catCreateAccountButton"
                    android:elevation="5dp"
                    android:layout_marginTop="20dp"
                    android:padding="20dp"
                    />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>