<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainNavigationPageActivity"
    android:background="@drawable/sri_lanka_background_image_01"
    android:padding="16dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@color/mrtSubMainBackgroundColor"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/mrtFontColor"
                android:text="@string/mnpWelcomeHeading"
                android:textSize="32sp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                />


            <TextView
                android:id="@+id/createAccountAsTouristButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:padding="10dp"
                android:drawableLeft="@drawable/baseline_photo_camera_24"
                android:text="@string/mnpCreateAccountAsTouristButton"
                android:background="@drawable/my_tourist_account_button"
                android:layout_marginTop="25dp"
                />

            <TextView
                android:id="@+id/hotelRegistrationButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/my_tourist_account_button"
                android:gravity="center"
                android:padding="10dp"
                android:drawableLeft="@drawable/baseline_restaurant_24"
                android:text="@string/mnpHotelRegistrationButton"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tourDriverRegistrationButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:padding="10dp"
                android:drawableLeft="@drawable/baseline_drive_eta_24"
                android:text="@string/mnpTourDriverRegistrationButton"
                android:background="@drawable/my_tourist_account_button"
                android:layout_marginTop="20dp"
                />

            <TextView
                android:id="@+id/tourGuideRegistrationButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:padding="10dp"
                android:drawableLeft="@drawable/baseline_tour_24"
                android:text="@string/mnpTourGuideRegistrationButton"
                android:background="@drawable/my_tourist_account_button"
                android:layout_marginTop="20dp"
                />

            <Button
                android:id="@+id/signInButton"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:textColor="@color/mrtFontColor"
                android:background="@drawable/create_account_as_tourist_activity_create_account_button"
                android:text="@string/mnpSignInButton"
                android:elevation="5dp"
                android:layout_marginTop="30dp"
                android:padding="15dp"
                android:textSize="20sp"
                />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>