<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/sri_lanka_background_image_01">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@color/mrtSubMainBackgroundColor"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/mrtFontColor"
                android:text="@string/siHeading"
                android:textSize="64sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                />

            <EditText
                android:id="@+id/userEmail"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/siEmailField"
                android:background="@color/mrtInputFieldColor"
                android:layout_marginTop="25dp"
                android:paddingLeft="10dp"
                />

            <EditText
                android:id="@+id/userPassword"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/siPassword"
                android:background="@color/mrtInputFieldColor"
                android:layout_marginTop="15dp"
                android:paddingLeft="10dp"
                />


            <Button
                android:id="@+id/submitButton"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:textColor="@color/mrtFontColor"
                android:background="@drawable/create_account_as_tourist_activity_create_account_button"
                android:text="@string/siSubmitButton"
                android:elevation="5dp"
                android:layout_marginTop="20dp"
                android:padding="15dp"
                android:textSize="20sp"
                />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>